brack.ast_old.ebnf
document := (stmt, newline, newline+)*, stmt?, newline* EOF
stmt := expr (newline expr)*
expr := (text | square | angle)+

angle := angle_bracket_open (module | angle) dot (ident | angle) (expr (comma expr)*)? angle_bracket_close 
curly := curly_bracket_open (module | angle) dot (ident | angle) (expr (comma expr)*)? curly_bracket_close
square := square_bracket_open (module | angle) dot (ident | angle) (expr (comma expr)*)? square_bracket_close

string_literal = double_quote
number_literal = parentheses_open number parentheses_close
list_literal = hash parentheses_open argument parentheses_close
tuple_literal = exclamation parentheses_open argument parentheses_close

module := text
ident := text

angle_bracket_open := "<"
angle_bracket_close := ">"
square_bracket_open := "["
square_bracket_close := "]"
curly_bracket_open := "{"
curly_bracket_close := "}"
parentheses_open := "("
parentheses_close := ")"

number := [0-9]+
boolean := "true" | "false"
text := [^.]+
whitespace := " "
newline := "\n"
dot := "."
comma := ","
hash := "#"
exclamation := "!"
double_quote := "\""
